15 Dec 2003  mipsator
 * added gen_test_file() to automate test file generation in detect. 
 * improved detect_compiler() to store data about the compiler.
 * updated use of detect_compiler() in pmk.
 * added comp_test.c in tests directory.

# snapshot 0.7.6

12 Dec 2003  mipsator
 * added tmp_open() in common.
 * updated func.c to use tmp_open().
 * changed remaining fprintf() to sterr into errorf() in common.
 * added preliminary TMPDIR stuff.
 * rewritten tmp_open() and added tmps_open() in common.
 * finished c test file randomization in func.
 * randomized temporary ac config file in ac_parse_config().
 * added detect.c and detect.h for compiler detection.
 * updated pmk to display detected compiler.

10 Dec 2003  mipsator
 * added new option to pmk to enable check build logging.
 * updated pmk man page with new -l option.

09 Dec 2003  mipsator
 * added MEMBER in CHECK_TYPE to check structure member.
 * updated pmkfile man page to sync with MEMBER addition.

06 Dec 2003  mipsator
 * moved fcopy() from pmkinstall to common.
 * add many missing code that was marked with XXX tags.
	(autoconf.c, common.c, func.c, functool.c)

# snapshot 0.7.5

30 Nov 2003 mipsator
 * added optional HEADER in CHECK_TYPE command.
 * updated pmkcfg.sh and pmkfile to check blkcnt_t correctly.

29 Nov 2003 mipsator
 * added use of POSIX macro for exit() status in parse.c, pmk.c,
	pmkinstall.c and pmkscan.c files.
 * added support for suid and sgid flags in pmkinstall.
 * finished strip support in pmkinstall.
 * re-enabled pmkinstall build in makefiles.
 * added test_pmkinstall in test_all target in makefiles.
 * added mkvar_test.c in tests directory.
 * added mkvar target in tests makefile.
 * rewritten get_make_var() to work with gnu make.
 * added compat to I_OBJS to fix pmkinstall build.
 * added stuff related to blkcnt_t type.

27 Nov 2003 mipsator
 * updated pmkinstall man page.

27 Nov 2003 xsa
 * added ECHO_N, ECHO_C, ECHO_T variables to pmk.conf for autoconf compat.